--- a/top-page.html
+++ b/top-page.html
@@ -516,6 +516,7 @@
                 <p><strong>合同会社三栗ケア介護事務所</strong></p>
                 <p>〒179-0073 東京都練馬区田柄２−１４−６</p>
                 <p>TEL: <a href="tel:080-9687-6667" class="meguri-contact-link">080-9687-6667</a></p>
+                <p>MAIL: <a href="mailto:info@meguri-kaigo.com" class="meguri-contact-link">info@meguri-kaigo.com</a></p>
                 <p>営業時間: 平日 9:00〜17:00 / 土日祝休</p>
             </div>
         </div>
