seminar link added

--- a/bonz-post/post01.html
+++ b/bonz-post/post01.html
@@ -339,7 +339,7 @@
         <div class="seminar-cta-section">
             <h2>お申し込み</h2>
             <p>システム開発の「あるある」を解決する実践的なセミナーです。AI活用で効率化を図りたい方、お待ちしております。</p>
-            <a href="#" class="seminar-cta-button">今すぐ参加申し込み</a>
+            <a target="_blank" href="https://bonzuttnerai1.peatix.com/view" class="seminar-cta-button">今すぐ参加申し込み</a>
         </div>
     </div>
 </body>
