adding seminar link

--- a/bonz-post/post02.html
+++ b/bonz-post/post02.html
@@ -441,7 +441,7 @@
             </div>
             
             <p>そんな方に最適な内容です。ぜひご参加ください。</p>
-            <a href="#" class="development-cta-button">セミナー詳細を見る</a>
+            <a target="_blank" href="https://bonzuttnerai1.peatix.com/view" class="development-cta-button">セミナー詳細を見る</a>
         </div>
     </div>
 </body>
