--- a/bonz-work-history/work-history-bz.html
+++ b/bonz-work-history/work-history-bz.html
@@ -324,6 +324,202 @@
             transform: translateX(4px);
         }
 
+        /* Modal Styles */
+        .modal-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.8);
+            display: none;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+            backdrop-filter: blur(5px);
+            animation: fadeIn 0.3s ease-out;
+        }
+
+        .modal-overlay.active {
+            display: flex;
+        }
+
+        .modal-content {
+            background: white;
+            border-radius: 20px;
+            max-width: 700px;
+            width: 90%;
+            max-height: 90vh;
+            overflow-y: auto;
+            position: relative;
+            animation: modalSlideIn 0.4s ease-out;
+            box-shadow: 0 25px 50px rgba(0, 0, 0, 0.3);
+        }
+
+        @keyframes modalSlideIn {
+            0% {
+                opacity: 0;
+                transform: translateY(-30px) scale(0.9);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0) scale(1);
+            }
+        }
+
+        .modal-header {
+            background: linear-gradient(135deg, var(--primary) 0%, var(--primary-dark) 100%);
+            padding: 30px;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .modal-header::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: radial-gradient(circle, rgba(255,255,255,0.1) 1px, transparent 1px);
+            background-size: 30px 30px;
+            animation: moveGrid 15s linear infinite;
+        }
+
+        .modal-close {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            background: rgba(255, 255, 255, 0.2);
+            border: none;
+            color: white;
+            font-size: 24px;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: all 0.3s ease;
+            z-index: 2;
+        }
+
+        .modal-close:hover {
+            background: rgba(255, 255, 255, 0.3);
+            transform: scale(1.1);
+        }
+
+        .modal-title {
+            font-size: 2rem;
+            font-weight: 800;
+            color: white;
+            margin-bottom: 10px;
+            position: relative;
+            z-index: 1;
+        }
+
+        .modal-client {
+            color: rgba(255, 255, 255, 0.9);
+            font-size: 1.1rem;
+            font-weight: 600;
+            position: relative;
+            z-index: 1;
+        }
+
+        .modal-body {
+            padding: 30px;
+        }
+
+        .modal-section {
+            margin-bottom: 25px;
+        }
+
+        .modal-section-title {
+            font-size: 1.2rem;
+            font-weight: 700;
+            color: var(--primary);
+            margin-bottom: 15px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .modal-section-title::before {
+            content: '';
+            width: 4px;
+            height: 20px;
+            background: var(--primary);
+            border-radius: 2px;
+        }
+
+        .modal-description {
+            color: var(--text-light);
+            line-height: 1.7;
+            font-size: 1rem;
+            text-align: justify;
+        }
+
+        .modal-tech-grid {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+        }
+
+        .modal-tech-tag {
+            padding: 8px 16px;
+            background: var(--primary-light);
+            color: var(--primary);
+            border-radius: 20px;
+            font-size: 0.9rem;
+            font-weight: 600;
+            transition: all 0.3s ease;
+        }
+
+        .modal-tech-tag:hover {
+            background: var(--primary);
+            color: white;
+            transform: translateY(-2px);
+        }
+
+        .modal-links {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+
+        .modal-link {
+            display: inline-flex;
+            align-items: center;
+            gap: 10px;
+            color: var(--primary);
+            text-decoration: none;
+            font-weight: 600;
+            padding: 12px 20px;
+            border: 2px solid var(--primary-light);
+            border-radius: 25px;
+            transition: all 0.3s ease;
+            background: white;
+        }
+
+        .modal-link:hover {
+            background: var(--primary);
+            color: white;
+            border-color: var(--primary);
+            transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(0, 161, 233, 0.3);
+        }
+
+        .modal-link svg {
+            width: 18px;
+            height: 18px;
+            transition: transform 0.3s ease;
+        }
+
+        .modal-link:hover svg {
+            transform: translateX(4px);
+        }
+
         /* Animations */
         @keyframes slideInDown {
             from {
@@ -397,6 +593,20 @@
             
             .search-box {
                 width: 100%;
+            }
+
+            .modal-content {
+                width: 95%;
+                margin: 20px;
+            }
+
+            .modal-title {
+                font-size: 1.5rem;
+            }
+
+            .modal-header,
+            .modal-body {
+                padding: 20px;
             }
         }
 
@@ -507,6 +717,59 @@
         </div>
     </section>
 
+    <!-- Modal -->
+    <div class="modal-overlay" id="projectModal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button class="modal-close" onclick="closeModal()">&times;</button>
+                <h2 class="modal-title">POLARISS</h2>
+                <p class="modal-client">Client: OWL-TY</p>
+            </div>
+            <div class="modal-body">
+                <div class="modal-section">
+                    <h3 class="modal-section-title">Description</h3>
+                    <p class="modal-description">
+                        POLARISS is an advanced IoT-based GPS security device designed to protect motorcycles and cars by providing real-time location tracking and smart monitoring features. Utilizing multiple satellite systems—GPS, Michibiki, and GLONASS—it offers highly accurate positioning, even in remote areas. It constantly uploads data to the cloud, allowing users to check their vehicle's location, battery status, temperature, and humidity at any time through the LINE app. Users can receive instant alerts if the vehicle moves outside a preset geofence, improving theft detection and recovery. Built on reliable Kyocera hardware, POLARISS is compact, durable, and easy to set up, with a rechargeable battery that can be hardwired.
+                        <br><br>
+                        POLARISS reflects Bonzuttner's commitment to delivering intuitive, reliable, and scalable IoT security solutions tailored to modern mobility needs.
+                    </p>
+                </div>
+
+                <div class="modal-section">
+                    <h3 class="modal-section-title">Technologies / Keywords</h3>
+                    <div class="modal-tech-grid">
+                        <span class="modal-tech-tag">IoT</span>
+                        <span class="modal-tech-tag">Azure Cloud</span>
+                        <span class="modal-tech-tag">Serverless</span>
+                        <span class="modal-tech-tag">LINE Chatbot</span>
+                        <span class="modal-tech-tag">Web App</span>
+                        <span class="modal-tech-tag">Soracom Func</span>
+                        <span class="modal-tech-tag">GPS</span>
+                        <span class="modal-tech-tag">Kyocera Hardware</span>
+                    </div>
+                </div>
+
+                <div class="modal-section">
+                    <h3 class="modal-section-title">Visit Project</h3>
+                    <div class="modal-links">
+                        <a href="https://thingsline.co.jp/index/" target="_blank" class="modal-link">
+                            Official Website
+                            <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+                            </svg>
+                        </a>
+                        <a href="https://news.webike.net/parts-gears/476329/" target="_blank" class="modal-link">
+                            Product News
+                            <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script>
         // Projects data
         const projects = [
@@ -556,7 +819,8 @@
                 client: "株式会社OWL-T",
                 description: "IoTデバイスによるバイク盗難防止および追跡監視システム。車両の動き、位置、加速度やバッテリー状態などのさまざまな指標を監視し、異常時にはLineアプリを通じてユーザーにメッセージングを行うアプリの開発",
                 technologies: ["React", "PHP Laravel", "Python", "Azure", "LINE"],
-                url: "https://thingsline.co.jp/index/"
+                url: "https://thingsline.co.jp/index/",
+                hasModal: true
             },
             {
                 id: 7,
@@ -619,6 +883,31 @@
         let currentFilter = 'all';
         let searchQuery = '';
 
+        // Modal functions
+        function openModal() {
+            document.getElementById('projectModal').classList.add('active');
+            document.body.style.overflow = 'hidden';
+        }
+
+        function closeModal() {
+            document.getElementById('projectModal').classList.remove('active');
+            document.body.style.overflow = 'auto';
+        }
+
+        // Close modal when clicking outside
+        document.getElementById('projectModal').addEventListener('click', function(e) {
+            if (e.target === this) {
+                closeModal();
+            }
+        });
+
+        // Close modal with Escape key
+        document.addEventListener('keydown', function(e) {
+            if (e.key === 'Escape') {
+                closeModal();
+            }
+        });
+
         // Animate stats on load
         function animateNumber(elementId, target, duration = 2000) {
             const element = document.getElementById(elementId);
@@ -674,7 +963,7 @@
             }
 
             grid.innerHTML = filteredProjects.map((project, index) => `
-                <div class="project-card" style="animation-delay: ${index * 0.1}s">
+                <div class="project-card" style="animation-delay: ${index * 0.1}s" ${project.hasModal ? 'onclick="openModal()"' : ''}>
                     <div class="project-header">
                         <div class="project-number">${project.id}</div>
                         <h3 class="project-title">${project.title}</h3>
@@ -687,8 +976,15 @@
                                 <span class="tech-tag">${tech}</span>
                             `).join('')}
                         </div>
-                        ${project.url ? `
-                            <a href="${project.url}" target="_blank" class="project-link">
+                        ${project.hasModal ? `
+                            <a href="javascript:void(0)" class="project-link" onclick="openModal(); event.stopPropagation();">
+                                Show More
+                                <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+                                </svg>
+                            </a>
+                        ` : project.url ? `
+                            <a href="${project.url}" target="_blank" class="project-link" onclick="event.stopPropagation();">
                                 Visit Project
                                 <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
